--- a/frames/settings.html
+++ b/frames/settings.html
@@ -6,6 +6,7 @@
     <!-- CSS -->
     <link href="../styles/bootstrap.min.css" rel="stylesheet">
     <link href="../styles/bootly.css" rel="stylesheet">
+    <link href="../styles/general.css" rel="stylesheet">
 
     <!-- Scripts -->
     <script type='text/javascript' src="../js/extensions/jquery.min.js"></script>
@@ -403,7 +404,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-sm-3">
-                                <button id="restoreDefaults" type="button" class="btn btn-primary btn-sm"></button>
+                                <button id="restoreDefaults" type="button" class="btn btn-flixtor btn-sm"></button>
                             </div>
                             <label id="restoreDefaultsSuccess" style="display: none" class="control-label"></label>
                         </div>
