--- a/frames/series.html
+++ b/frames/series.html
@@ -14,6 +14,7 @@
         <script type='text/javascript' src="../js/extensions/jquery.min.js"></script>
         <script type='text/javascript' src="../js/extensions/bootstrap.min.js"></script>
         <script type='text/javascript' src="../js/extensions/jquery-ui.js"></script>
+        <script type='text/javascript' src="../js/extensions/circle-progress.js"></script>
 
         <script src="../js/extensions/jquery.isotope.min.js"></script>
         <script src="../js/extensions/nwcontextmenu.js"></script>
@@ -23,10 +24,11 @@
             var main = require('../js/main.js');
             var callwcf = require('../js/callwcf.js');
             var gui = require('nw.gui');
-            var yifysubtitle = require('../js/yifysubtitle.js');
+            var subtitles = require('../js/subtitle.js');
             var favorites = require('../js/favorites.js');
             var translations = require('../js/translations.js');
             var dateFormat = require('dateformat');
+            var readTorrent = require('read-torrent');
             var health = require('torrent-health');
             var xbmc = require('nodebmc');
             var chromecastjs = require('chromecast-js');
@@ -211,7 +213,7 @@
                                     $(results).each(function(index) {
                                         var serie = results[index];
 
-                                        if (typeof serie.images.poster !== 'undefined') {
+                                        if (typeof serie.images.poster !== 'undefined' && !(~serie.images.poster.toString().indexOf('poster-dark')) ) {
                                             var newChars = "-300";
                                             var position = serie.images.poster.lastIndexOf(".");
                                             var tmpOne = serie.images.poster.substr(0, position);
@@ -307,6 +309,7 @@
                             var serie = serieID.firstChild.innerHTML;
                             var torrents;
                             var currentTorrent;
+                            var currentSubtitle;
                             var episodeTitle;
                             var fanart;
 
@@ -337,12 +340,16 @@
 
                                     fanart = serie.images.fanart;
 
-                                    //Set variables to html
-                                    var newChars = '-300';
-                                    var position = serie.images.poster.lastIndexOf(".");
-                                    var tmpOne = serie.images.poster.substr(0, position);
-                                    var tmpTwo = serie.images.poster.substr(position, serie.images.poster.length);
-                                    var seriePoster = tmpOne + newChars + tmpTwo;
+                                    if (typeof serie.images.poster !== 'undefined' && !(~serie.images.poster.toString().indexOf('poster-dark')) ) {
+                                        var newChars = "-300";
+                                        var position = serie.images.poster.lastIndexOf(".");
+                                        var tmpOne = serie.images.poster.substr(0, position);
+                                        var tmpTwo = serie.images.poster.substr(position, serie.images.poster.length);
+                                        var seriePoster = tmpOne + newChars + tmpTwo;
+                                    }
+                                    else {
+                                        var seriePoster = '../images/no-poster.png';
+                                    }
                                     $("#poster").attr('src', seriePoster);
 
                                     $("#title").html(serie.title);
@@ -354,7 +361,7 @@
                                         gen = gen.trim();
                                         translatedGen = translations.translate(gen);
                                         translatedGenres.push(translatedGen);
-                                    })
+                                    });
                                     var genres = translatedGenres.join(", ");
                                     $("#genres").append(genres);
 
@@ -451,9 +458,16 @@
                                         for (var key in torrents) {
                                             var torrent = torrents[key];
                                             if( key !== '0' ) {
-                                                $("#quality").append('<button data-torrent="'+torrent.url+'" class="btn btn-quality" style="width: 100%;">'+key+'</button>');
+                                                $("#quality").append('<button data-torrent="'+torrent.url+'" class="btn btn-quality" style="width: 100%;">'+key+'<label title=""><div style="width: 20px; position: absolute; top: 2px; right: 5px;" class="circle"></div></label></button>');
                                             }
                                         }
+
+                                        $('.circle').circleProgress({
+                                            value: 0,
+                                            thickness: 2,
+                                            size: 14,
+                                            emptyFill: "#272f3a"
+                                        });
 
                                         // Select first quality
                                         $("#quality").find(".btn-quality:first").trigger("click");
@@ -477,7 +491,7 @@
                                         var tmpTorrents = new Buffer(JSON.stringify(torrents)).toString('base64');
                                         var tmpTitle = new Buffer(JSON.stringify(episodeTitle)).toString('base64');
                                         var tmpFanart = new Buffer(JSON.stringify(fanart)).toString('base64');
-                                        main.go("players/series-player.html?magnet=" + tmpCurrentTorrent+"&torrents="+tmpTorrents+"&title="+tmpTitle+"&image="+tmpFanart);
+                                        main.go("players/series-player.html?magnet=" + tmpCurrentTorrent+"&torrents="+tmpTorrents+"&title="+tmpTitle+"&image="+tmpFanart+"&subtitle="+currentSubtitle);
                                     });
 
                                     $("body").on("click", ".xmbcPlay", function () {
@@ -505,14 +519,69 @@
                                     $("body").on("click", ".btn-quality", function () {
                                         $(".btn-quality").removeClass("current");
                                         $(this).addClass('current');
+                                        var current = $(this);
                                         var torrent = $(this).data("torrent");
+
+                                        $(current).find('.circle').hide();
+                                        $(current).find('label').append('<img style="width: 14px; height: 14px; position: absolute; right: 8px; top: 3px;" id="img-spinner" src="../images/ajax-loader.gif" alt="Loading"/>');
+
                                         health(torrent).then(function(health) {
-                                            console.log(health);
+                                            var ratio = health.peers > 0 ? (health.seeds / health.peers) : health.seeds;
+
+                                            // Normalize the data. Convert each to a percentage
+                                            var normalizedRatio = Math.min(ratio / 5 * 100, 100);
+                                            // Seeds: Anything above 30 seeds is good
+                                            var normalizedSeeds = Math.min(health.seeds / 30 * 100, 100);
+
+                                            // Weight the above metrics differently
+                                            // Ratio is weighted 60% whilst seeders is 40%
+                                            var ratioWeight = normalizedRatio * 0.6;
+                                            var seedsWeight = normalizedSeeds * 0.4;
+                                            var totalWeight = (ratioWeight + seedsWeight) / 100;
+
+                                            $(current).find('.circle').show();
+
+                                            $(current).find('label').attr('title', 'Seeds '+health.seeds+' / Peers '+health.peers);
+                                            $(current).find('.circle').circleProgress({
+                                                value: totalWeight,
+                                                animation: false,
+                                                fill: {
+                                                    color: "#66afe9"
+                                                }
+                                            });
+
+                                            $(current).find('#img-spinner').remove();
+
                                         })
                                         .catch(function (err) {
                                             console.error(err)
-                                        })
+                                            $(current.find('label').attr('title', 'Seeds unknown / Peers unknown'));
+                                        });
+
+                                        readTorrent(torrent, function(err, torrentInfo) {
+                                            subtitles.search(torrentInfo.name, function (subs) {
+                                                $('.subtitles').empty();
+                                                $('.subtitles').append('<li><a class="subtitle" data-subname="No subtitle" data-subiso="" >No subtitle</a></li>');
+                                                if( subs !== false ) {
+                                                    console.log(subs);
+                                                    for (var key in subs) {
+                                                        var sub = subs[key];
+                                                            $(".subtitles").append('<li><a class="subtitle" data-subname="'+sub.languageName+'" data-subiso="'+sub.languageName+'" >'+sub.languageName+'</a></li>');
+                                                    }
+                                                }
+                                            });
+                                        });
                                         currentTorrent = torrent;
+                                    });
+
+                                    $("body").on("click", ".subtitle", function () {
+                                        var subIso = $(this).data("subiso");
+                                        var subName = $(this).data("subname");
+                                        $('#btnSubtitle').empty();
+                                        $('#btnSubtitle').append('<i class="glyphicon glyphicon-play"></i>&nbsp;&nbsp;'+subName+'');
+
+                                        currentSubtitle = subIso;
+                                        console.log(currentSubtitle);
                                     });
 
                                     $(".container").height('100%');
@@ -601,7 +670,7 @@
                         function closeSerieDetail()
                         {
                             try{
-                                var subManager = yifysubtitle.getSubManager();
+                                var subManager = subtitles.getSubManager();
                                 if( subManager ) {
                                     subManager.server.listen(0);
                                     subManager.server.close();
@@ -812,31 +881,11 @@
                                     <div id="episode-overview" class="pt-30"></div>
                                     <div class="ptb-30">
                                     <div class="btn-group" style="width: 100%;">
-                                        <button type="button" class="btn btn-flixtor btn-sm" style="width: 90%;"><i class='glyphicon glyphicon-play'></i>&nbsp;&nbsp;No subtitles</button>
+                                        <button type="button" id="btnSubtitle" class="btn btn-flixtor btn-sm" style="width: 90%;"><i class='glyphicon glyphicon-play'></i>&nbsp;&nbsp;No subtitle</button>
                                         <button type="button" class="btn btn-flixtor dropdown-toggle btn-sm" data-toggle="dropdown" style="width: 10%;">
                                             <span class="caret"></span>
                                         </button>
                                         <ul class="dropdown-menu dropdown-menu-flixtor subtitles" role="menu" style="width: 100%;">
-                                            <li><a>English</a></li>
-                                            <li><a>German</a></li>
-                                            <li><a>Greek</a></li>
-                                            <li><a>Chinese</a></li>
-                                            <li><a>Poland</a></li>
-                                            <li><a>English</a></li>
-                                            <li><a>German</a></li>
-                                            <li><a>Greek</a></li>
-                                            <li><a>Chinese</a></li>
-                                            <li><a>Poland</a></li>
-                                            <li><a>English</a></li>
-                                            <li><a>German</a></li>
-                                            <li><a>Greek</a></li>
-                                            <li><a>Chinese</a></li>
-                                            <li><a>Poland</a></li>
-                                            <li><a>English</a></li>
-                                            <li><a>German</a></li>
-                                            <li><a>Greek</a></li>
-                                            <li><a>Chinese</a></li>
-                                            <li><a>Poland</a></li>
                                         </ul>
                                     </div>
                                     </div>
